--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ plugins {
 android {
     compileSdkVersion 30
     defaultConfig {
-        applicationId "com.skyyo.expandabledraggablelist2"
+        applicationId "com.skyyo.expandabledraggablelist"
         minSdkVersion 26
         targetSdkVersion 30
         versionCode 1
