--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,9 +39,10 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation "androidx.fragment:fragment-ktx:1.3.0"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0"
+    implementation 'androidx.appcompat:appcompat:1.3.0-rc01'
+    implementation "androidx.fragment:fragment-ktx:1.3.2"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
+    implementation 'androidx.activity:activity-compose:1.3.0-alpha06'
 
     implementation "androidx.compose.animation:animation:$compose_version"
     implementation "androidx.compose.foundation:foundation:$compose_version"
@@ -52,7 +53,6 @@ dependencies {
     implementation "androidx.compose.runtime:runtime:$compose_version"
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
-    implementation 'androidx.activity:activity-compose:1.3.0-alpha02'
 
     implementation 'com.google.android.material:material:1.3.0'
 
