--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,12 +37,8 @@ android {
 }
 
 dependencies {
-
-    implementation 'androidx.core:core-ktx:1.5.0'
-    implementation 'androidx.appcompat:appcompat:1.4.0-alpha02'
-    implementation "androidx.fragment:fragment-ktx:1.3.5"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
-    implementation 'androidx.activity:activity-compose:1.3.0-beta02'
+    
+    implementation 'androidx.activity:activity-compose:1.3.1'
 
     implementation "androidx.compose.animation:animation:$compose_version"
     implementation "androidx.compose.foundation:foundation:$compose_version"
@@ -54,7 +50,7 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
 
-    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'com.google.android.material:material:1.4.0'
 
     testImplementation 'junit:junit:4.13.2'
 }
