--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:name="com.skyyo.expandablelist.CardsApplication"
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -13,6 +13,7 @@
         <activity
             android:name="com.skyyo.expandablelist.MainActivity"
             android:label="@string/app_name"
+            android:exported="true"
             android:theme="@style/Theme.ExpandableList.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
